--- a/index.html
+++ b/index.html
@@ -938,10 +938,8 @@
               <div class="col-sm-3">
                  <div class="heading-sm">Contact Us</div>
             <ul>
-                <li><a href="#" class="text-white">+1 000 000 000</a></li>
-                <li><a href="#" class="text-white">info@sharptoken.com</a></li>
-                <li><a href="#" class="text-white">supports@sharptoken.com</a></li>
-            </ul> 
+                <li><a href="mailto:info@sharpplatform.com" class="text-white">info@sharpplatform.com</a></li>
+             </ul> 
             </div>
 
         </div>
