--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 </div>
                 <article class="aos-init aos-animate" data-aos="fade-up">
                    <p >
-                       Total number of tokens will not exceed 100,000,000,0000 (100 billion) that will be released over time. Community minding rewards pool is the largest pool of tokens the contributors and builders. There is a very strict lock-in period for the founders, executives, early investors, and team members. 
+                       Total number of tokens will not exceed 100,000,000,0000 (100 billion) that will be released over time. Community mining rewards pool is the largest pool of tokens the contributors and builders. There is a very strict lock-in period for the founders, executives, early investors, and team members. 
                    </p>
                 </article>
             </div>
