--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
     </div>
 <div class="container-fuild">
   <div class="copyright text-center">
-           &copy; 2022 Sharp Token. All rights reserved
+           &copy; 2022 CSharp (BVI) Inc. All rights reserved
  </div>
 </div>
 </footer>
