--- a/index.html
+++ b/index.html
@@ -174,10 +174,6 @@
                     The Sharp Platform
                 </div>
                 <article>
-                    <p class="aos-init aos-animate" data-aos="fade-up">
-                        An open-source social networking platform for purpose and growth-focused communities
-                    </p>
-                
                    <p class="aos-init aos-animate" data-aos="fade-up">
                        The Sharp Platform is a scalable, secure, innovative Web 3.0 platform for member-contribution-based businesses and communities that want to introduce digital assets and digital economies to their existing users or build a new system for their new ideas and projects. Soon, businesses will require platforms that supports both Web 2.0 and Web 3.0 technologies. 
                        The Sharp Platform provides best of the both worlds with the help of Blockchain, Web 3.0, Intelligent Cloud, Mobile, 
@@ -543,9 +539,6 @@
             <ul>
                 <li><a href="privacy-policy.html" class="text-white">Privacy Policy</a></li>
                 <li><a href="terms.html" class="text-white">Terms</a></li>
-                <li><a href="#" class="text-white">Acceptable Use Policy</a></li>
-                <li><a href="#" class="text-white">Technology Privacy</a></li>
-                <li><a href="#" class="text-white">Developer Agreement</a></li>
             </ul> 
             </div>
             
@@ -572,7 +565,7 @@
     </div>
 <div class="container-fuild">
   <div class="copyright text-center">
-           Copyright 2022 Sharp Platform, All rights reserved.
+           © 2022 CSharp (BVI) Inc. All rights reserved
  </div>
 </div>
 </footer>
