--- a/terms.html
+++ b/terms.html
@@ -457,9 +457,7 @@
             <ul>
                 <li><a href="privacy-policy.html" class="text-white">Privacy Policy</a></li>
                 <li><a href="terms.html" class="text-white">Terms</a></li>
-                <li><a href="#" class="text-white">Acceptable Use Policy</a></li>
-                <li><a href="#" class="text-white">Technology Privacy</a></li>
-                <li><a href="#" class="text-white">Developer Agreement</a></li>
+                
             </ul> 
             </div>
             
@@ -486,7 +484,10 @@
     </div>
 <div class="container-fuild">
   <div class="copyright text-center">
-           Copyright 2022 Sharp Platform, All rights reserved.
+           © 2022 CSharp (BVI) Inc. All rights reserved
+
+
+
  </div>
 </div>
 </footer>
