--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -572,7 +572,10 @@
     </div>
 <div class="container-fuild">
   <div class="copyright text-center">
-           Copyright 2022 Sharp Platform, All rights reserved.
+           © 2022 CSharp (BVI) Inc. All rights reserved
+
+
+
  </div>
 </div>
 </footer>
