--- a/terms.html
+++ b/terms.html
@@ -464,11 +464,11 @@
             <div class="col-sm-12 col-md-6 col-lg-3 col-xlg-3">
                   <div class="heading-sm">Menu</div>
             <ul>
-                <li><a href="#AboutUs" class="text-white">About Us</a></li>
-                <li><a href="#PlatformFeatures" class="text-white">Platform Features</a></li>
-                <li><a href="#Tokenomics" class="text-white">Tokenomics</a></li>
-                <li><a href="#Roadmap" class="text-white">Roadmap</a></li>
-                <li><a href="#TheExecutiveTeam" class="text-white">Team</a></li>
+                <li><a href="index.html#AboutUs" class="text-white">About Us</a></li>
+                <li><a href="index.html#PlatformFeatures" class="text-white">Platform Features</a></li>
+                <li><a href="index.html#Tokenomics" class="text-white">Tokenomics</a></li>
+                <li><a href="index.html#Roadmap" class="text-white">Roadmap</a></li>
+                <li><a href="index.html#TheExecutiveTeam" class="text-white">Team</a></li>
             </ul> 
             </div>
 
