--- a/terms.html
+++ b/terms.html
@@ -36,25 +36,25 @@
     <div class="collapse navbar-collapse justify-content-end" id="MainNavbar">
       <ul class="navbar-nav" id="navbar-links">
         <li class="nav-item">
-          <a class="nav-link" href="#PlatformFeatures">Platform Features</a>
+          <a class="nav-link" href="index.html#PlatformFeatures">Platform Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#AboutUs">About Us</a>
+          <a class="nav-link" aria-current="page" href="index.html#AboutUs">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#HowItWorks">How It Works</a>
+          <a class="nav-link" href="index.html#HowItWorks">How It Works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#Tokenomics">Tokenomics</a>
+          <a class="nav-link" href="index.html#Tokenomics">Tokenomics</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#Roadmap">Roadmap</a>
+          <a class="nav-link" href="index.html#Roadmap">Roadmap</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#TheExecutiveTeam">Team</a>
+          <a class="nav-link" href="index.html#TheExecutiveTeam">Team</a>
         </li>
         <li class="nav-item btn-contact-us">
-          <a class="nav-link" href="#ContacUs">Contact Us</a>
+          <a class="nav-link" href="index.html#ContacUs">Contact Us</a>
         </li>
       </ul>
      
