--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#TheExecutiveTeam">Team</a>
         </li>
-        <li class="nav-item btn-contact-us">
+        <!--<li class="nav-item btn-contact-us">
           <a class="nav-link" href="#ContacUs">Contact Us</a>
-        </li>
+        </li>-->
       </ul>
      
     </div>
@@ -285,12 +285,12 @@
             </div>
         </div>
         <div class="row mt-50">
-            <div class="col-xlg-4 col-md-12 aos-init aos-animate" data-aos="fade-right">
+            <div class="col-lg-4 col-md-12 aos-init aos-animate" data-aos="fade-right">
                 <figure class="mt-50">
                 <img src="images/img-pie-chart.png" class="img-fluid d-block mx-auto" alt="">
                 </figure>
             </div>
-            <div class="col-xlg-8 col-md-12">
+            <div class="col-lg-8 col-md-12">
                 <ul class="listing mt-50">
                     <li class="aos-init aos-animate" data-aos="fade-up">
                         <span class="icons icon-1"></span>
@@ -384,10 +384,11 @@
                     <article class="designation">
                        Founder
                     </article>
-                    <div class="social-icons">
-                        <a href="#"><img src="images/linkedin-icon.png" class="img-fluid d-block mx-auto"></a>
+                    <div class="social-icons d-flex justify-content-center">
+                        <a href="https://twitter.com/mcbeniwal" target="new"><img src="images/linkedin-icon.png" class="img-fluid mx-2"></a>
+                        <a href="https://twitter.com/mcbeniwal" target="new"><img src="images/twitter-icon.png" class="img-fluid mx-2"></a>
                     </div>
-                    </div>
+                </div>
             </div>
 
             <div class="col-xlg-3 col-lg-4 col-md-6 col-sm-12 text-center aos-init aos-animate" data-aos="fade-up">
@@ -401,8 +402,9 @@
                     <article class="designation">
                       Chief Executive Officer
                     </article>
-                    <div class="social-icons">
-                        <a href="#"><img src="images/linkedin-icon.png" class="img-fluid d-block mx-auto"></a>
+                    <div class="social-icons d-flex justify-content-center">
+                        <a href="https://www.linkedin.com/in/kjellhegstad/" target="new"><img src="images/linkedin-icon.png" class="img-fluid mx-2"></a>
+                        <a href="https://twitter.com/mobilethor" target="new"><img src="images/twitter-icon.png" class="img-fluid mx-2"></a>
                     </div>
                 </div>
             </div>
@@ -418,8 +420,9 @@
                     <article class="designation">
                      Chief Operating Officer
                     </article>
-                    <div class="social-icons">
-                        <a href="#"><img src="images/linkedin-icon.png" class="img-fluid d-block mx-auto"></a>
+                    <div class="social-icons d-flex justify-content-center">
+                        <a href="https://www.linkedin.com/in/douglaswagner1/" target="new"><img src="images/linkedin-icon.png" class="img-fluid mx-2"></a>
+                        <a href="#" target="new"><img src="images/twitter-icon.png" class="img-fluid mx-2"></a>
                     </div>
                 </div>
             </div>
@@ -435,8 +438,9 @@
                     <article class="designation">
                      Chief Legal Officer
                     </article>
-                    <div class="social-icons">
-                        <a href="#"><img src="images/linkedin-icon.png" class="img-fluid d-block mx-auto"></a>
+                    <div class="social-icons d-flex justify-content-center">
+                        <a href="#" target="new"><img src="images/linkedin-icon.png" class="img-fluid mx-2"></a>
+                        <a href="#" target="new"><img src="images/twitter-icon.png" class="img-fluid mx-2"></a>
                     </div>
                 </div>
             </div>
@@ -452,8 +456,9 @@
                     <article class="designation">
                      Chief Partnership Officer
                     </article>
-                    <div class="social-icons">
-                        <a href="#"><img src="images/linkedin-icon.png" class="img-fluid d-block mx-auto"></a>
+                    <div class="social-icons d-flex justify-content-center">
+                        <a href="#" target="new"><img src="images/linkedin-icon.png" class="img-fluid mx-2"></a>
+                        <a href="#" target="new"><img src="images/twitter-icon.png" class="img-fluid mx-2"></a>
                     </div>
                 </div>
             </div>
@@ -471,8 +476,9 @@
                     <article class="designation">
                      Human Resources
                     </article>
-                    <div class="social-icons">
-                        <a href="#"><img src="images/linkedin-icon.png" class="img-fluid d-block mx-auto"></a>
+                    <div class="social-icons d-flex justify-content-center">
+                        <a href="#" target="new"><img src="images/linkedin-icon.png" class="img-fluid mx-2"></a>
+                        <a href="#" target="new"><img src="images/twitter-icon.png" class="img-fluid mx-2"></a>
                     </div>
                 </div>
             </div>
@@ -483,7 +489,7 @@
     </div>
 </section>
 
-<section class="wrapper mb-0 contact-us" id="ContacUs">
+<!--<section class="wrapper mb-0 contact-us" id="ContacUs">
     <div class="container pt-40 pb-40">
         <div class="row g-4">
             <div class="col-lg-6 col-md-5 col-sm-12">
@@ -508,7 +514,6 @@
                     </div>
                     <div class="form-group">
                         <textarea  placeholder="Message" class="form-control input-message" required></textarea>
-                        <!--<input type="text" placeholder="Message" class="form-control input-message">-->
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-light">Send Message</button>
@@ -519,7 +524,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
 
 <footer class="footer">
     <div class="container">
@@ -580,7 +585,7 @@
 <script type="text/javascript" src="vendor/js/aos.js"></script>
 
 <script type="text/javascript">
-        AOS.init();
+    AOS.init();
     window.onscroll = function() {scrollFunction()};
 
     function scrollFunction() {
